css and wrapper to fix layout issues

--- a/apps/documentation/src/components/TableOfContents/TableOfContents.module.css
+++ b/apps/documentation/src/components/TableOfContents/TableOfContents.module.css
@@ -1,6 +1,12 @@
 /*
  * Component inspired by: https://github.com/mantinedev/mantine/tree/master/apps/mantine.dev/src/components/TableOfContents
  */
+@media (max-width: 80em) {
+  .wrapper {
+    display: none;
+  }
+}
+
 .wrapper {
   padding-left: var(--mantine-spacing-md);
   position: sticky;
